# SpeechIndicator

./: .gitignore  CMakeLists.txt  xbqmlplugin.pro
examples/: AssetUrlHandler.h  CMakeLists.txt  app.qml  examples.pro  examples.qrc  main.cpp
plugin/: CMakeLists.txt  plugin.pro  qml.qrc  qmldir  speechindicator.cpp  speechindicator.h  speechindicator_plugin.cpp  speechindicator_plugin.h  xbqmlplugin_plugin.cpp  xbqmlplugin_plugin.h
plugin/qml/: Refresher.qml  SpeechWaveIndicator.qml  StateSelector.qml  TagsArea.qml  TagsField.qml
xbqmlplugin/: CMakeLists.txt  qml.qrc  qmldir
xbqmlplugin/qml/: SpeechWaveIndicator.qml  StateSelector.qml
